--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,16 @@ body {
     color: green;
     line-height: 13px;
 }
+/* ********************** */
+.total{
+    display: inline-block;
+    /*padding: 0.6em 1em;*/
+    /*background-color: #bbb;*/
+    cursor: default !important;
+
+}
+
+#totalDestroyedBox{
+    display: block;
+    float: right;
+}
