--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 #main {
-    width: 500px;
+    width: 700px;
     margin: auto;
     text-align: left;
     background: white;
@@ -50,4 +50,13 @@ body {
 #totalDestroyedBox{
     display: block;
     float: right;
+}
+
+
+body{
+    padding-top: 1em;
+}
+
+.lateral{
+    padding-top: 37em;
 }
